requirements.txt 수정

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,8 @@ openai
 google-api-python-client
 oauth2client
 django
-djangoframework
+djangorestframework
 multimetric
+memory_profiler
+copydetect
+pylama
