--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,8 @@
     "@emotion/styled": "^11.10.5",
     "@monaco-editor/react": "^4.4.6",
     "@mui/material": "^5.10.16",
+    "@nivo/core": "^0.80.0",
+    "@nivo/pie": "^0.80.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
